# rs-at91-bare-metal

./: .gitignore  .tmuxinator.yml  Cargo.toml  Makefile  build.rs  debug.gdb  linker.ld
.cargo/: config
src/: at91_debug_unit.rs  main.rs  semihosting.rs  startup.S  uart.rs
